--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,69 +40,69 @@ jobs:
       pathtoPublish: './nightly'
       artifactName: build
 
-- job: 'Build_Windows32'
-  pool:
-    vmImage: 'vs2017-win2016'
-  steps:
-  - script: git submodule update --init --recursive
-    displayName: 'Checkout Submodules'
-  - script: ./CI/install-qt-win.cmd
-    displayName: 'Install QT'
-  - script: ./CI/install-script-win.cmd
-    displayName: 'Download / Setup Deps / Run CMake'
-  - task: MSBuild@1
-    displayName: 'Build 32-bit'
-    inputs: 
-      msbuildArguments: '/m /p:Configuration=RelWithDebInfo'
-      solution: .\build32\obs-studio.sln
-  - script: ./CI/before-deploy-win.cmd
-    condition: ne(variables['Build.Reason'], 'PullRequest')
-    displayName: 'Before deploy'
-  - task: PublishBuildArtifacts@1
-    condition: ne(variables['Build.Reason'], 'PullRequest')
-    inputs:
-      pathtoPublish: './build'
-      artifactName: winbuild
+#- job: 'Build_Windows32'
+#  pool:
+#    vmImage: 'vs2017-win2016'
+#  steps:
+#  - script: git submodule update --init --recursive
+#    displayName: 'Checkout Submodules'
+#  - script: ./CI/install-qt-win.cmd
+#    displayName: 'Install QT'
+#  - script: ./CI/install-script-win.cmd
+#    displayName: 'Download / Setup Deps / Run CMake'
+#  - task: MSBuild@1
+#    displayName: 'Build 32-bit'
+#    inputs: 
+#      msbuildArguments: '/m /p:Configuration=RelWithDebInfo'
+#      solution: .\build32\obs-studio.sln
+#  - script: ./CI/before-deploy-win.cmd
+#    condition: ne(variables['Build.Reason'], 'PullRequest')
+#    displayName: 'Before deploy'
+#  - task: PublishBuildArtifacts@1
+#    condition: ne(variables['Build.Reason'], 'PullRequest')
+#    inputs:
+#      pathtoPublish: './build'
+#      artifactName: winbuild
 
-- job: 'Build_Windows64'
-  pool:
-    vmImage: 'vs2017-win2016'
-  steps:
-  - script: git submodule update --init --recursive
-    displayName: 'Checkout Submodules'
-  - script: ./CI/install-qt-win.cmd
-    displayName: 'Install QT'
-  - script: ./CI/install-script-win.cmd
-    displayName: 'Download / Setup Deps / Run CMake'
-  - task: MSBuild@1
-    displayName: 'Build 64-bit'
-    inputs: 
-      msbuildArguments: '/m /p:Configuration=RelWithDebInfo'
-      solution: .\build64\obs-studio.sln
-  - script: ./CI/before-deploy-win.cmd
-    condition: ne(variables['Build.Reason'], 'PullRequest')
-    displayName: 'Before deploy'
-  - task: PublishBuildArtifacts@1
-    condition: ne(variables['Build.Reason'], 'PullRequest')
-    inputs:
-      pathtoPublish: './build'
-      artifactName: winbuild
+#- job: 'Build_Windows64'
+#  pool:
+#    vmImage: 'vs2017-win2016'
+#  steps:
+#  - script: git submodule update --init --recursive
+#    displayName: 'Checkout Submodules'
+#  - script: ./CI/install-qt-win.cmd
+#    displayName: 'Install QT'
+#  - script: ./CI/install-script-win.cmd
+#    displayName: 'Download / Setup Deps / Run CMake'
+#  - task: MSBuild@1
+#    displayName: 'Build 64-bit'
+#    inputs: 
+#      msbuildArguments: '/m /p:Configuration=RelWithDebInfo'
+#      solution: .\build64\obs-studio.sln
+#  - script: ./CI/before-deploy-win.cmd
+#    condition: ne(variables['Build.Reason'], 'PullRequest')
+#    displayName: 'Before deploy'
+#  - task: PublishBuildArtifacts@1
+#    condition: ne(variables['Build.Reason'], 'PullRequest')
+#    inputs:
+#      pathtoPublish: './build'
+#      artifactName: winbuild
 
-- job: 'Build_Linux'
-  pool:
-    vmImage: 'ubuntu-16.04'
-  steps:
-  - script: git submodule update --init --recursive
-    displayName: 'Checkout Submodules'
-  - script: ./CI/install-dependencies-linux.sh
-    displayName: 'Install Dependencies'
+#- job: 'Build_Linux'
+#  pool:
+#    vmImage: 'ubuntu-16.04'
+#  steps:
+#  - script: git submodule update --init --recursive
+#    displayName: 'Checkout Submodules'
+#  - script: ./CI/install-dependencies-linux.sh
+#    displayName: 'Install Dependencies'
 
-  - script: ./CI/before-script-linux.sh
-    displayName: 'CMake'
+#  - script: ./CI/before-script-linux.sh
+#    displayName: 'CMake'
 
-  - bash: |
-      cd ./build
-      make -j4
-      cd -
-    displayName: 'Build'
+#  - bash: |
+#      cd ./build
+#      make -j4
+#      cd -
+#    displayName: 'Build'
 
